--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,7 @@ services:
       - 127.0.0.1:8080:80
     volumes:
       - ./:/var/www/html/
+      - ./docker/php/php.ini:/usr/local/etc/php/php.ini
+      - ./log:/var/log
 #    environment:
 #     - XDEBUG_CONFIG="xdebug.idekey=''"
